compiler/testData/diagnostics/tests/duplicateJvmSignature/erasure/typeParameter.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_PLATFORM_DECLARATIONS!>fun <T> foo(x: T): T {null!!}<!>
<!CONFLICTING_PLATFORM_DECLARATIONS!>fun foo(x: Any): Any {null!!}<!>